fix: border-right disappear on mobile

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -46,3 +46,9 @@ html {
 .justify-content-evenly {
     justify-content: space-evenly;
 }
+
+@media (max-width: 991px) {
+    .border-right{
+        border-right: 0px !important;
+    }
+}
